--- a/angular.json
+++ b/angular.json
@@ -96,7 +96,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "./node_modules/bootstrap/scss/_buttons.scss"
             ],
             "scripts": []
           }
